--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <!-- endbuild -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
 
@@ -26,7 +26,7 @@
             <h2>a better way to camp</h2>
           </div>
           <div class="col-md-4 col-xl-2 mt-4">
-            <button type="button" data-toggle="modal" data-target="#reserveModal" class="btn-info border-white">Reserve A Campsite</button>    
+            <button type="button" id="reserveButton" class="btn-info btn border-white">Reserve A Campsite</button>    
           </div>
         </div>
       </div>
@@ -35,7 +35,7 @@
     <div id="reserveModal" class="modal fade" role="dialog">
       <div class="modal-dialog" role="document" class="modal-lg">
           <div class="modal-content">
-              <div class="modal-header bg-info text-white">
+              <div class="modal-header">
                   <h3 class="modal-title">Reserve A Campsite</h3>
                   <button type="button" class="close" data-dismiss="modal">&times;</button>
               </div>
@@ -93,18 +93,17 @@
     <div class="container">
       <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="nucampNavbar">
           <ul class="navbar-nav">
-            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i>Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i>Sites</a></li>
-            <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i>Contact</a></li>
+            <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i> About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+            <li class="nav-item"><a class="nav-link" href="contactus.html"><i class="fa fa-address-card fa-lg"></i> Contact</a></li>
           </ul>
           <span class="navbar-text ml-auto">
-            <a role="button" data-toggle="modal" data-target="#loginModal">
+            <a role="button" id="loginButton">
                 <i class="fa fa-sign-in"></i> Login
             </a>
         </span>
